# ogl-boilerplate-cmake

./: .gitignore  CMakeLists.txt  README.md
opengl-boilerplate-cmake/: CMakeLists.txt  main.cpp
